Fix scrollbar, profilecard, message card and remove button

--- a/client/src/CSS/FriendsCard.css
+++ b/client/src/CSS/FriendsCard.css
@@ -13,7 +13,6 @@
 .friendsWrapper h1{
     margin-top: 80px;
     margin-bottom: 0px;
-    font-weight: 700;
     font-size: 35px;
 }
 
@@ -21,9 +20,8 @@
     padding: 20px;
     display: flex;
     flex-direction: column;
-    border-radius: 16px;
-    width: 70%;
-    min-width: 400px;
+    align-items: center;
+    justify-content: center;
 }
 
 /* FriendsCard.js */
@@ -39,21 +37,24 @@
     border-bottom: solid 1px #D3D3D3;
     cursor: pointer;
     transition: all 0.2s;
-
 }
 .friendCardWrapper:hover{
     scale: 1.02;
+}
+
+.friendsInfoContainer {
+    display: flex;
+    padding: 8px 15px;
 }
 .friendCardWrapper img{
     min-width: 50px;
     width: 10%;
     height: 50px;
-    margin: 8px 0px 8px 15px;
     border: 3px solid 	#D3D3D3;
     border-radius: 100%;
 }
 .friendsInfo{
-    width: 52%;
+    margin: 0 0 0 7px;
 }
 .friendsInfo h3{
     margin: 3px 0px 5px;
@@ -63,7 +64,7 @@
 .friendsInfo p{
     font-size: 13px;
     width: 200px;
-    margin: 0px;
+    margin: 0;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -78,12 +79,10 @@
 }
 
 .friendCardWrapper button{
-    width: 20%;
-    min-width: 50px;
-    margin: 10px;
+    margin: 0 10px;
     background-color: #3C2A21;
     color: #f6f1e9;
-    padding: 8px;
+    padding: 8px 12px;
     border-radius: 10px;
     border: none;
     font-size: 12px;
@@ -104,7 +103,6 @@
         font-size: 25px;
     }
     .friendsCardContainer{
-        /* padding: 10px; */
         width: 80%;
         min-width: 200px;
     }
@@ -122,12 +120,5 @@
         font-size: 12px;
         width: 170px;
     }
-    .friendCardWrapper button{
-        width: 18%;
-        min-width: 40px;
-        margin: 5px 8px 5px 5px;
-        padding: 7px;
-    }
-
 }
 
